--- a/style.css
+++ b/style.css
@@ -13,3 +13,20 @@
 .blue {
   background-color: blue;
 }
+
+.runner-bg {
+  background-image: url(https://images.unsplash.com/photo-1461896836934-ffe607ba8211?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA==);
+  background-size: cover;
+  min-height: 80dvh;
+}
+
+.text-shadow {
+  text-shadow: 1px 1px black;
+}
+
+.team-bg {
+  background-image: url(https://plus.unsplash.com/premium_photo-1685055940243-5d47260aa893?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-size: cover;
+  opacity: 0.7;
+  min-height: 75dvh;
+}
