--- a/style.css
+++ b/style.css
@@ -23,3 +23,9 @@
   opacity: 0.7;
   min-height: 75dvh;
 }
+
+.background-color {
+  background-color: darkgrey;
+  background-size: cover;
+  min-height: none;
+}
